--- a/01_введение.md
+++ b/01_введение.md
@@ -1,1 +1,18 @@
+Большинство прорывов в области искусственного интеллекта основаны на глубоком обуче­нии.
+Глубокое обучение представляет собой набор алгоритмов и моделей, а это значит, что для его понимания необходимо ориентироваться в том, как эти алгоритмы и модели обрабатывают данные. 
+Замечательное свойство глубокого обучения состоит не в сложности его математических концепций, а в том, как с помощью таких простых вычис­лений ему удается выполнять настолько разнообразный спектр захватываю­щих и впечатляющих задач.  На самом
+деле модель глубокого обучения — это всего лишь большое (очень большое) количество умножений и сложений с добавлением нелинейных отношений.
 
+Глубокое обучение — это подраздел искусственного интеллекта, посвящен­ный моделированию крупных нейронных сетей, которые способны прини­мать верные решения на основе данных.  Глубокое обучение особенно хорошо себя проявляет в задачах со сложными данными и огромными массивами информации.
+
+Глубокое обучение позволяет принимать решения на основе данных за счет определения и извлечения закономерностей из огромных наборов информации, устанавливая правильные связи между цепочкой сложных входных значений и удачными решениями.
+
+Глубокое обучение стало результатом исследований в области машинного об­учения и искусственного интеллекта. 
+
+Машинное обучение подразумевает разработку и оценивание алгоритмов, которые позволяют компьютеру извлекать функции из набора данных (то есть учиться на ряде примеров). 
+
+В контексте машинного обучения *алгоритм* определяет процедуру анализа набора данных и выделяет повторяющиеся в этом наборе закономер­ности.
+
+Функция — это детерминистическое отношение между входными значе­ниями и одним или несколькими выходными. Детерминированность этого отношения означает, что любой конкретный ввод всегда генерирует один и тот же вывод. Например, сложение является детерминистическим отноше­нием: 2+2 всегда равно 4. Как вы позже увидите, функции можно создавать не только для элементарной арифметики, но и для более сложных предмет­ных областей. Например, мы можем определить функцию, которая принимает в качестве ввода доход и задолженность человека и выдает на выходе его кредитоспособность. По существу, целью машинного обуче­ния является получение функций из данных. Функция может быть представлена множеством разных способов: как простая арифметическая операция (напри­мер, сложение и вычитание принимают ввод и возвращают одно выходное зна­чение). Функцию можно представить с помощью нейронной сети. Глубокое об­учение является подразделом машинного обучения, посвященным глубокому моделированию нейронных сетей.  Закономерности, которые алгоритмы глу­бокого обучения извлекают из наборов данных, являются функциями, пред­ставленными в виде нейронных сетей. Каждый нейрон реализует функцию: он при­нимает на вход ряд значений и связывает их со своим выводом. Для выведения функций нейронная сеть использует стратегию «разде­ляй и властвуй»: каждый ее нейрон формирует простую функцию, которая в совокупности с результатами других нейронов формирует общую (более сложную) функцию. 
+
+Под предметной областью мы имеем в виду проблему или задачу, которую пыта­емся решить с помощью машинного обучения. Это может быть, например, филь­трация спама, предсказание цен на недвижимость или автоматическая классифи­кация рентгеновских снимков.
