--- a/01_введение.md
+++ b/01_введение.md
@@ -1,5 +1,5 @@
-Большинство прорывов в области искусственного интеллекта основаны на глубоком обуче­нии.
-Глубокое обучение представляет собой набор алгоритмов и моделей, а это значит, что для его понимания необходимо ориентироваться в том, как эти алгоритмы и модели обрабатывают данные. 
+Большинство прорывов в области искусственного интеллекта основаны на *глубоком обуче­нии*.
+Глубокое обучение представляет собой набор *алгоритмов* и *моделей*, а это значит, что для его понимания необходимо ориентироваться в том, как эти алгоритмы и модели обрабатывают данные. 
 Замечательное свойство глубокого обучения состоит не в сложности его математических концепций, а в том, как с помощью таких простых вычис­лений ему удается выполнять настолько разнообразный спектр захватываю­щих и впечатляющих задач.  На самом
 деле модель глубокого обучения — это всего лишь большое (очень большое) количество умножений и сложений с добавлением нелинейных отношений.
 
