--- a/01_введение.md
+++ b/01_введение.md
@@ -15,9 +15,11 @@
 
 Функция — это детерминистическое отношение между входными значе­ниями и одним или несколькими выходными. Детерминированность этого отношения означает, что любой конкретный ввод всегда генерирует один и тот же вывод. Например, сложение является детерминистическим отноше­нием: 2+2 всегда равно 4. Как вы позже увидите, функции можно создавать не только для элементарной арифметики, но и для более сложных предмет­ных областей. Например, мы можем определить функцию, которая принимает в качестве ввода доход и задолженность человека и выдает на выходе его кредитоспособность. По существу, целью машинного обуче­ния является получение функций из данных. Функция может быть представлена множеством разных способов: как простая арифметическая операция (напри­мер, сложение и вычитание принимают ввод и возвращают одно выходное зна­чение). Функцию можно представить с помощью нейронной сети. Глубокое об­учение является подразделом машинного обучения, посвященным глубокому моделированию нейронных сетей.  Закономерности, которые алгоритмы глу­бокого обучения извлекают из наборов данных, являются функциями, пред­ставленными в виде нейронных сетей. Каждый нейрон реализует функцию: он при­нимает на вход ряд значений и связывает их со своим выводом. Для выведения функций нейронная сеть использует стратегию «разде­ляй и властвуй»: каждый ее нейрон формирует простую функцию, которая в совокупности с результатами других нейронов формирует общую (более сложную) функцию. 
 
-Под предметной областью мы имеем в виду проблему или задачу, которую пыта­емся решить с помощью машинного обучения. Это может быть, например, филь­трация спама, предсказание цен на недвижимость или автоматическая классифи­кация рентгеновских снимков.
+  Под предметной областью мы имеем в виду проблему или задачу, которую пыта­емся решить с помощью машинного обучения. Это может быть, например, филь­трация спама, предсказание цен на недвижимость или автоматическая классифи­кация рентгеновских снимков.
 
-Алгоритм машинного обучения — это поисковый процесс, предназначенный для выбора из ряда потенциальных вариантов функции, которая лучше всего объясняет отношения между признаками набора данных.
+  Алгоритм машинного обучения — это поисковый процесс, предназначенный для выбора из ряда потенциальных вариантов функции, которая лучше всего объясняет отношения между признаками набора данных.
 
-Процесс машинного обучения состоит из двух этапов: собственно обуче­ния и формирования логического вывода. На первом этапе алгоритм обра­батывает набор данных и выбирает функцию, которая лучше всего соответ­ствует выявленным закономерностям. Затем эта функция кодируется в виде компьютерной программы (последовательности правил if-then-else или па­раметров определенного уравнения). Это так называемая модель, а анализ данных с целью извлечения функции часто называют обучением модели. В сущности, модель — это функция, закодированная в виде компьютер­ной программы. Однако в машинном обучении понятия модели и функции настолько близки, что отличиями между ними зачастую пренебрегают и ис­пользуют их как синонимы.
-В глубоком обучении функции, извлекаемые из наборов данных в ходе их анализа, представлены в виде моделей нейронных сетей. Иными словами, модель нейронной сети кодирует функцию в виде компьютерной программы. Обычно в начале обучения нейронная сеть инициализируется с использова­нием случайных параметров (можете считать их значениями, которые влияют на поведение ко­дируемой функции). Такая сеть очень плохо (рандомно) сопоставляет различные входные значения и заданный ввод в предоставленном наборе данных. В процессе об­учения она анализирует доступные примеры и в каждом случае сравнивает свой собственный вывод с результатом, указанным в наборе данных, корректируя свои параметры так, чтобы получить более близкое соответствие. Найдя функцию, которая выдает достаточно точное решение (с точки зрения того, на­сколько близок ее вывод к правильным результатам, указанным в наборе дан­ных) для нашей проблемы, алгоритм машинного обучения завершает работу и возвращает итоговую модель. На этом этап обучения заканчивается.
+  Процесс машинного обучения состоит из двух этапов: собственно обуче­ния и формирования логического вывода. 
+  На первом этапе алгоритм обра­батывает набор данных и выбирает функцию, которая лучше всего соответ­ствует выявленным закономерностям. Затем эта функция кодируется в виде компьютерной программы (последовательности правил if-then-else или па­раметров определенного уравнения). Это так называемая модель, а анализ данных с целью извлечения функции часто называют обучением модели. В сущности, модель — это функция, закодированная в виде компьютер­ной программы. Однако в машинном обучении понятия модели и функции настолько близки, что отличиями между ними зачастую пренебрегают и ис­пользуют их как синонимы.
+В глубоком обучении функции, извлекаемые из наборов данных в ходе их анализа, представлены в виде моделей нейронных сетей. Иными словами, модель нейронной сети кодирует функцию в виде компьютерной программы. Обычно в начале обучения нейронная сеть инициализируется с использова­нием случайных параметров (можете считать их значениями, которые влияют на поведение ко­дируемой функции). Такая сеть очень плохо (рандомно) сопоставляет различные входные значения и заданный ввод в предоставленном наборе данных. В процессе об­учения она анализирует доступные примеры и в каждом случае сравнивает свой собственный вывод с результатом, указанным в наборе данных, корректируя свои параметры так, чтобы получить более близкое соответствие. Найдя функцию, которая выдает достаточно точное решение (с точки зрения того, на­сколько близок ее вывод к правильным результатам, указанным в наборе дан­ных) для нашей проблемы, алгоритм машинного обучения завершает работу и возвращает итоговую модель. На этом этап обучения заканчивается. С этого момента модель остается неизменной.
+  Второй этап машинного обучения — формирование логических выводов. 
