--- a/01_введение.md
+++ b/01_введение.md
@@ -20,6 +20,11 @@
   Алгоритм машинного обучения — это поисковый процесс, предназначенный для выбора из ряда потенциальных вариантов функции, которая лучше всего объясняет отношения между признаками набора данных.
 
 Процесс машинного обучения состоит из двух этапов: собственно обуче­ния и формирования логического вывода. 
+
 На первом этапе алгоритм обра­батывает набор данных и выбирает функцию, которая лучше всего соответ­ствует выявленным закономерностям. Затем эта функция кодируется в виде компьютерной программы (последовательности правил if-then-else или па­раметров определенного уравнения). Это так называемая модель, а анализ данных с целью извлечения функции часто называют обучением модели. В сущности, модель — это функция, закодированная в виде компьютер­ной программы. Однако в машинном обучении понятия модели и функции настолько близки, что отличиями между ними зачастую пренебрегают и ис­пользуют их как синонимы.
 В глубоком обучении функции, извлекаемые из наборов данных в ходе их анализа, представлены в виде моделей нейронных сетей. Иными словами, модель нейронной сети кодирует функцию в виде компьютерной программы. Обычно в начале обучения нейронная сеть инициализируется с использова­нием случайных параметров (можете считать их значениями, которые влияют на поведение ко­дируемой функции). Такая сеть очень плохо (рандомно) сопоставляет различные входные значения и заданный ввод в предоставленном наборе данных. В процессе об­учения она анализирует доступные примеры и в каждом случае сравнивает свой собственный вывод с результатом, указанным в наборе данных, корректируя свои параметры так, чтобы получить более близкое соответствие. Найдя функцию, которая выдает достаточно точное решение (с точки зрения того, на­сколько близок ее вывод к правильным результатам, указанным в наборе дан­ных) для нашей проблемы, алгоритм машинного обучения завершает работу и возвращает итоговую модель. На этом этап обучения заканчивается. С этого момента модель остается неизменной.
-Второй этап машинного обучения — формирование логических выводов. 
+
+Второй этап машинного обучения — формирование логических выводов.  Это необходимо в том слу­чае, когда модель применяется к новым примерам, правильные результаты для которых нам неизвестны, и мы хотим, чтобы она их для нас сгенериро­вала. Большая часть работы в машинном обучении заключается в формирова­нии точной модели (то есть извлечении из данных подходящей функции).
+
+Извлеченную функцию можно применить к незнакомому набору данных, и значения, которые она при этом выдаст, помогут выработать правильные решения для этих новых задач (то есть ее можно использовать для получения логических выводов).Как вы
+помните, функция — это всего лишь детерминистическое отношение между вводом и выводом. Огромное количество решений для множества задач в различных предметных областях можно представить в виде функций.
