--- a/01_введение.md
+++ b/01_введение.md
@@ -28,3 +28,14 @@
 
 Извлеченную функцию можно применить к незнакомому набору данных, и значения, которые она при этом выдаст, помогут выработать правильные решения для этих новых задач (то есть ее можно использовать для получения логических выводов).Как вы
 помните, функция — это всего лишь детерминистическое отношение между вводом и выводом. Огромное количество решений для множества задач в различных предметных областях можно представить в виде функций.
+
+Cложность машинного обучения обуславливаетя наличием *шума* (поврежденные или неправильные данные) в наборах данных, поэтому поиск функции,которая в точности соответствует данным, не всегда оказывается лучшей стратегией, поскольку подразумевает обучение этому шуму. Во-вторых, ча­сто бывает так, что количество возможных функций превышает количество примеров в наборе данных. Это означает, что задача, стоящая перед машин­ным обучением, сформулирована неправильно: предоставленной информации недостаточно для нахождения единого лучшего решения; вместо этого данным будут соответствовать несколько потенциальных решений. Как вариант - можно собрать больше примеров, чтобы выявить победителя (но это сложно). Чтобы преодолеть этот недоста­
+ток, присущий задачам машинного обучения, алгоритмы пытаются дополнить имеющиеся данные рядом предположений о том, какими характеристиками должна обладать лучшая функция (или модель), и таким образом корректи­руют свой выбор. Эти предположения называются *индуктивным сдвигом ал­горитма*, поскольку в логике процесс формирования общего правила на основе конкретных примеров известен как индуктивное умозаключение.
+
+Итак, алгоритм машинного обучения использует для выбора лучшей функции два источника информации: набор данных и предположения (ин­дуктивный сдвиг), вследствие которых он склонен отдавать предпочтение од­ним функциям перед другими, независимо от закономерностей, обнаружен­ных в наборе. Индуктивный сдвиг наделяет алгоритм машинного обучения собственным «взглядом» на предоставленные ему данные. Но, как и в реаль­ном мире, не существует таких взглядов (сдвигов), которые были бы пра­вильными во всех ситуациях (наборах данных).
+
+Алгоритмы с большим индуктивным сдвигом обращают меньше внимания на предостав­ленную информацию. Например, если алгоритм отдает предпочтение очень простым функциям, не имеет значения, насколько сложны закономерности в наборе данных, поскольку его индуктивный сдвиг очень большой.
+
+Алгоритмы с большим сдвигом могут столкнуться с одной из двух проблем. С одной стороны, если сдвиг слишком сильный, алгоритм проигнорирует важ­ную информацию, и полученная функция не будет учитывать нюансы реаль­ных закономерностей набора данных. Иными словами, функция окажется слишком сложной для этой предметной области, и вывод, который она генери­рует, не будет точным. Такой исход называют недообучением. С другой стороны, если сдвиг слишком маленький (или щадящий), алгоритм получает излишнюю свободу в поиске функции, которая должна максимально соответствовать дан­ным.  В этом случае функция, скорее всего, получится слишком сложной для данной предметной области и, что еще хуже, будет захватывать шум, закрав­шийся в учебный набор данных. Это ограничит способность функции делать обобщения о новых данных (которые не входили в учебный набор). Такой ис­ход называют переобучением. Поиск алгоритма машинного обучения, способ­ного находить подходящий баланс между данными и индуктивным сдвигом в конкретной предметной области, является ключом к подбору функции, кото­рая не страдает от недообучения или переобучения и умеет делать удачные об­общения (сохраняя точность как при формировании логических выводов, так и при обработке новых примеров, не входивших в учебный набор данных).
+
+
