--- a/01_введение.md
+++ b/01_введение.md
@@ -38,4 +38,8 @@ Cложность машинного обучения обуславливает
 
 Алгоритмы с большим сдвигом могут столкнуться с одной из двух проблем. С одной стороны, если сдвиг слишком сильный, алгоритм проигнорирует важ­ную информацию, и полученная функция не будет учитывать нюансы реаль­ных закономерностей набора данных. Иными словами, функция окажется слишком сложной для этой предметной области, и вывод, который она генери­рует, не будет точным. Такой исход называют недообучением. С другой стороны, если сдвиг слишком маленький (или щадящий), алгоритм получает излишнюю свободу в поиске функции, которая должна максимально соответствовать дан­ным.  В этом случае функция, скорее всего, получится слишком сложной для данной предметной области и, что еще хуже, будет захватывать шум, закрав­шийся в учебный набор данных. Это ограничит способность функции делать обобщения о новых данных (которые не входили в учебный набор). Такой ис­ход называют переобучением. Поиск алгоритма машинного обучения, способ­ного находить подходящий баланс между данными и индуктивным сдвигом в конкретной предметной области, является ключом к подбору функции, кото­рая не страдает от недообучения или переобучения и умеет делать удачные об­общения (сохраняя точность как при формировании логических выводов, так и при обработке новых примеров, не входивших в учебный набор данных).
 
+Три ключевых элемента машинного обучения:
+1. Данные (набор готовых примеров).
+2. Набор функций, из которых алгоритм пытается выбрать наиболее подходящую для имеющихся данных.
+3. Некий показатель пригодности, с помощью которого можно оценить, насколько хорошо каждый из вариантов подходит для имеющихся данных.
 
